# sense-os

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  playwright.config.cjs  pyproject.toml  pytest.ini  requirements.txt  scripts_bundle_2026-02-18_0507.md
apps/api_gateway/: pyproject.toml
apps/api_gateway/tests/: conftest.py  test_clusters.py  test_export_payload_contract_v1.py  test_health.py  test_insights_cluster_detail.py  test_insights_declining.py  test_insights_emerging.py  test_insights_export_endpoint.py  test_insights_top_pains.py  test_meta_status.py  test_no_db_imports.py  test_openapi.py  test_overview_contract.py  test_pains_detail.py  test_pains_list.py  test_pains_performance.py  test_signals.py  test_trends.py  test_verticals.py
services/clustering_worker/: pyproject.toml
services/clustering_worker/tests/: conftest.py  test_build_vectors_incremental_cache.py  test_cluster_persistence_idempotent.py  test_cluster_summary_v1.py  test_cluster_title_ngrams.py  test_competitive_heat_score.py  test_confidence_score_v1.py  test_contradiction_index.py  test_exploitability_tier_mapping.py  test_exploitability_v1.py  test_golden_snapshot_clustering.py  test_golden_snapshot_vertical.py  test_key_phrases_v1.py  test_monetizability_score.py  test_pain_severity_index.py  test_persona_inference.py  test_recurrence_score.py  test_representative_signals_v1.py  test_tfidf_vectorize.py  test_threshold_clustering.py  test_vectorize_json_log.py  test_worker_clusters_job.py
services/ingestion_worker/: pyproject.toml
services/ingestion_worker/tests/: test_created_at_is_datetime_for_ingestion_maps.py  test_dedup_policy.py  test_fetch_reddit_signals.py  test_hackernews_map_contract.py  test_hashes.py  test_indiehackers_map_contract.py  test_ingest_vertical.py  test_ingest_vertical_checkpoints.py  test_ingest_vertical_routing.py  test_normalize_signal.py  test_producthunt_map_contract.py  test_reddit_adapter_smoke.py  test_reddit_client.py  test_worker_consumes_job.py
services/scheduler/: jobs.py  planner.py  pyproject.toml
services/scheduler/tests/: conftest.py  test_backfill_checkpoint.py  test_planner_builds_jobs.py  test_publisher_smoke.py  (+1 more)
services/trend_worker/: pyproject.toml
(+36395 files in other folders)
