[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sense-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "sense-queue",
  "sense-db",
  "sense-domain",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
